tests/snapshots/test_runner__tests__compiler__typecheck__effect_operation_argument_type_mismatch_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
effect Exception = [
  raise <A>(message: String) : A
]

entry
  123 ! raise

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/effect_operation_argument_type_mismatch_1.kk:6:3
  │
6 │   123 ! raise
  │   ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
